[package]
name = "bevy_racing_redux"
version = "0.1.0"
publish = false
authors = ["Thirawat Tharawitsrikul"] 
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]
graphics = [
    "dep:bevy_egui",
    "dep:renet_visualizer",
    "bevy_rapier3d/debug-render-3d",
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/vorbis",
    "bevy/x11",
    "bevy/filesystem_watcher",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/default_font",
    "bevy/webgl2",
]
server = []
client = []
default = ["graphics"]

# All of Bevy's default features exept for the audio related ones, since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
bevy_rapier3d = "0.22.0"

bevy_egui = { version = "0.21.0", optional = true }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e" }
bincode = "1.3.3"
fastrand = "2.0.0"
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e", features = [
    "bevy",
], optional = true }
parry3d = "0.13"
wgpu = { version = "0.16", features = ["spirv"] }
cfg-if = "1.0.0"
serde = "1.0.189"
virtual_joystick = { version = "2.0.1"}
cfg_rust_features = "0.1.1"

[build-dependencies]
embed-resource = "1.4"
